Fix load command to load all images into one session